--- a/src/index.css
+++ b/src/index.css
@@ -5,9 +5,40 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  width: 100%;
+  height: 90vh;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+.TextWrapper{
+  width: 100%;
+  display: flex;
+  align-items: center;
+  flex-flow: column;
+  padding-top: 10%;
+}
+
+.ButtonWrapper{
+  display: flex;
+}
+
+.searchbar{
+  width: 500px;
+  margin-right: 10px;
+}
+
+.Navbar{
+  height: 10vh;
+}
+
+.NightSwitch{
+  padding-top: 10px;
+}
+
+.selectedPokemon{
+  color: red;
 }
