--- a/src/index.css
+++ b/src/index.css
@@ -1,44 +1,53 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  width: 100%;
-  height: 90vh;
+.App{
+  position: relative;
+  height: 100vh;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
-}
-
-.TextWrapper{
+.text-wrapper{
   width: 100%;
   display: flex;
   align-items: center;
   flex-flow: column;
-  padding-top: 10%;
 }
 
-.ButtonWrapper{
+.button-wrapper{
   display: flex;
 }
 
 .searchbar{
   width: 500px;
   margin-right: 10px;
+  margin-bottom: 30px;
 }
 
-.Navbar{
+.navbar{
   height: 10vh;
 }
 
-.NightSwitch{
+.night-switch{
   padding-top: 10px;
 }
 
-.selectedPokemon{
-  color: red;
+.selected-pokemon{
+  font-weight: 700;
+}
+
+li{
+  list-style-type: none;
+  padding-bottom: 10px;
+  margin-left: -40px;
+  text-transform: capitalize;
+}
+
+
+p{
+  text-transform: capitalize;
+}
+
+.transition{
+  transition: padding-top 1.5s ease-in-out;
+}
+
+.cursor{
+  cursor: pointer;
 }
